fix: bottom border is visible in quickmode select

--- a/app/component/quickSettingsPanel.scss
+++ b/app/component/quickSettingsPanel.scss
@@ -151,6 +151,7 @@
       padding: 0 1.5rem 0 0.9em;
       overflow: hidden;
       width: 100%;
+      height: 100%;
     }
   }
 }
